# fep-workshop-1

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/: __init__.py
backend/src/core/: __init__.py
backend/src/feptm/: main.py
backend/src/feptm/api/: __init__.py  router.py
backend/src/feptm/api/v1/: __init__.py  periods.py  projects.py  reports.py  specialists.py  timesheets.py
backend/src/feptm/core/: config.py  utils.py
backend/src/feptm/data/: payment_periods.json  projects.json  specialists.json
backend/src/feptm/models/: __init__.py  payment.py  project.py  specialist.py
backend/src/feptm/services/: __init__.py  mock_data_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py  test_periods_api.py  test_projects_api.py  test_reports_api.py  test_root.py  test_specialists_api.py
backend/tests/models/: __init__.py  test_project.py  test_specialist.py
backend/tests/services/: __init__.py
docs/: requirements.md
